fix position of tooltip on chrome I commented the style `content-visibility` of `<body>`, because it makes those elements with `position: fixed` behave weired, like tooltip or back-to-top button, especially when their initial status is hidden.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,7 +14,7 @@ body {
   background-size: cover;
   background-attachment: fixed;
   background-repeat: no-repeat;
-  content-visibility: auto;
+  /* content-visibility: auto; */
   font-size: 16px;
   font-family: system-ui, sans-serif;
   font-weight: 400;
@@ -319,7 +319,8 @@ nav ul {
   line-break: auto;
   padding: 5px;
   border-radius: 0 10px 0 10px;
-  background: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(.2rem);
+  /* background: rgba(0, 0, 0, 0.6); */
   box-shadow: 0 0 5px rgb(244, 67, 54);
 }
 
